--- a/resources/pubsubtopic/default-namespace.yaml
+++ b/resources/pubsubtopic/default-namespace.yaml
@@ -3,4 +3,4 @@ kind: Namespace
 metadata:
   annotations:
     cnrm.cloud.google.com/project-id: privateblockchain
-  name: default
+  name: kccresources
