--- a/resources/pubsubtopic/pubsub_v1beta1_pubsubtopic.yaml
+++ b/resources/pubsubtopic/pubsub_v1beta1_pubsubtopic.yaml
@@ -12,14 +12,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: pubsub.cnrm.cloud.google.com/v1beta1
-kind: PubSubTopic
-metadata:
-  labels:
-    label-one: "value-one"
-  name: pubsubtopic-sample
-spec:
-  schemaSettings:
-    schemaRef:
-      name: pubsubtopic-dep
-    encoding: JSON
+#apiVersion: pubsub.cnrm.cloud.google.com/v1beta1
+#kind: PubSubTopic
+#metadata:
+#  labels:
+#    label-one: "value-one"
+#  name: pubsubtopic-sample
+#spec:
+#  schemaSettings:
+#    schemaRef:
+#      name: pubsubtopic-dep
+#    encoding: JSON
