--- a/resources/pubsubtopic/pubsub.yaml
+++ b/resources/pubsubtopic/pubsub.yaml
@@ -1,8 +1,8 @@
   apiVersion: pubsub.cnrm.cloud.google.com/v1beta1
   kind: PubSubTopic
   metadata:
-    #annotations:
-      #cnrm.cloud.google.com/project-id: privateblockchain
+    annotations:
+      cnrm.cloud.google.com/project-id: privateblockchain
     labels:
       env: poc
     name: pubsubtopic-sample
