--- a/resources/pubsubtopic/pubsub.yaml
+++ b/resources/pubsubtopic/pubsub.yaml
@@ -1,6 +1,7 @@
   apiVersion: pubsub.cnrm.cloud.google.com/v1beta1
   kind: PubSubTopic
   metadata:
+    namespace: kccresource
     annotations:
       cnrm.cloud.google.com/project-id: privateblockchain
     labels:
