--- a/resources/pubsubtopic/pubsub.yaml
+++ b/resources/pubsubtopic/pubsub.yaml
@@ -1,7 +1,7 @@
   apiVersion: pubsub.cnrm.cloud.google.com/v1beta1
   kind: PubSubTopic
   metadata:
-    namespace: kccresources
+    namespace: cnrm-system
     annotations:
       cnrm.cloud.google.com/project-id: privateblockchain
     labels:
